--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@media (min-width:997px){
 body{
     font-family: Helvetica,Arial,sans-serif;
     font-size: 12px;
@@ -28,6 +29,10 @@ body{
 {
     color: #9cb4d8;
     font-weight: normal;
+    text-decoration: none;
+}
+#forgot:hover{
+    text-decoration: underline;
 }
 #loginbtn
 {
@@ -72,7 +77,7 @@ td
 }
 .logo
 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI',Tahoma, Geneva, Verdana, sans-serif;
     font-size: 160%;
     float: left;
     cursor: pointer;
@@ -112,6 +117,9 @@ td
     max-width:980px;
     height:598px;
 }
+.mobContentContainer{
+    display: none;
+}
 .description
 {
     color: #0e385f;
@@ -119,7 +127,7 @@ td
     font-weight: bold;
     line-height: 29px;
     margin-top: 40px;
-    width: 450px;
+    width: 480px;
     word-spacing: -1px;
 }
 img
@@ -235,9 +243,14 @@ img
     height: 30px;
     padding: 5px;
 }
+#questionmark {
+        width: 16px;
+        height: 16px;
+        display: block;
+}
 .gender_container,.birthday_container
 {
-    margin-top: 10px;
+    margin-top: 5px;
     display:block;
     font-family: inherit;
     width: inherit;
@@ -369,5 +382,87 @@ img
     margin-top:15px;
     margin-bottom: 15px;
 }
+}
+@media only screen and (min-width: 0px) and (max-width:996px)
+{
+    body{
+        margin:0;
+        width:100%;
+        padding:0;
+    }
+    .loggedout_menubar_container{
+        background: #3b5998;
+        height: 44px;
+        margin: 0;
+        width: 100%;
+        /* display:block; */
+    }
+    .loggedout_menubar
+    {
+        /* display:block;
+        height:inherit;
+        padding-top:9px;
+        padding-bottom:9px;
+        margin-top: 9px;
+        margin-bottom: 9px;
+        margin-left:auto;
+        margin-right:auto;
+        display: none; */
+        padding: auto;
+        
+    }
+    .logo {
+        
+        text-align: center;
+    }
+    .logo a h1{
+        font-size: 25px;
+        position:absolute;
+        left:50%;
+        margin-left: -50px;
+        margin-top:5px;
+        color:#fff;
+    }
+    .header {
+        /* text-align: center; */
+        display:block;
+        font-family: 'Segoe UI',Tahoma, Geneva, Verdana, sans-serif;
+        
 
+    }
+    .bgcontainer{
+        background: #fff;
+        width:100%;
+    }
+    .mobContentContainer{
+        display: block;
+        font-size: 14px;
+        line-height: 18px;
+        margin: 0 auto;
+        max-width: 416px;
+        padding: 0 16px;
+
+    }
+    .mobContentContainer form input{
+        display: block;
+        letter-spacing: normal;
+        word-spacing: normal;
+        text-transform: none;
+        text-indent: 0px;
+        text-shadow: none;
+        text-align: start;
+        background: #f5f6f7;
+        font-size: 14px;
+        line-height: 18px;
+    }
+    #login_container,#loginform{
+        display: none;
+    }
+    .bgsubcontainer{
+        display: none;
+    }
+    .footer_container{
+        display: none;
+    }
+}
 
