--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ img
         font-size: 14px;
         line-height: 18px;
         margin: 0 auto;
-        /* width: 416px; */
+        max-width: 416px;
         width:100%;
         height: 310px;
         /*padding: 0 16px;  */
