--- a/style.css
+++ b/style.css
@@ -321,6 +321,7 @@ img
     display: inline-block;
     margin-top: 10px;
     margin-bottom: 10px;
+    text-shadow:rgba(0, 0, 0, 0.5) 0px 1px 2px;
 }
 #celeb_pages
 {
