--- a/style.css
+++ b/style.css
@@ -59,6 +59,17 @@
     background-color: #365899;
     border-color: #29487d;
 }
+#login:focus,#password:focus{
+    outline: none;
+}
+#firstname:focus,#surname:focus,#pwd:focus,#contact:focus{
+    outline-color: #bdc7d8;
+}
+#flogo{
+    width: 170px;
+    height: 34px;
+    margin-top:17px;
+}
 .loggedout_menubar
 {
     margin-left: auto;
@@ -256,6 +267,7 @@ img
     height: 30px;
     padding: 5px;
     border: 1px solid #ccd0d5;
+    background-color: #fff;;
 }
 #questionmark1 {
         width: 16px;
@@ -446,14 +458,12 @@ img
     .logo {
         
         text-align: center;
+        
     }
-    .logo a h1{
-        font-size: 25px;
-        position:absolute;
-        left:50%;
-        margin-left: -50px;
-        margin-top:5px;
-        color:#fff;
+    #flogo{
+        width: 123px;
+        height: 24px;
+        margin-top: 8px;
     }
     .header {
         /* text-align: center; */
@@ -552,6 +562,7 @@ img
         z-index: -1;
         border-radius: 4px;
         border-style: solid;
+        border-color: rgba(0, 0, 0, .15) rgba(0, 0, 0, .15) rgba(0, 0, 0, .26);
     }
     .separator{
         margin: 12px 0 14px 0;
