--- a/style.css
+++ b/style.css
@@ -509,6 +509,14 @@
     .mobFooter{
         display: none;
     }
+    .radiobtn_container{
+        padding-top:10px;
+        padding-bottom: 10px;
+        margin-right: 2px;
+    }
+    /* .gender_container{
+        
+    } */
 }
 @media only screen and (min-width: 0px) and (max-width:996px)
 {
